--- a/RecBole/config/ADMMSLIM.yaml
+++ b/RecBole/config/ADMMSLIM.yaml
@@ -25,23 +25,16 @@ user_inter_num_interval: "[0, inf)"
 item_inter_num_interval: "[0, inf)"
 
 # Training Settings_basic
-epochs: 1000
-train_batch_size: 128
-learner: 'adam'
-learning_rate: 0.001
+epochs: 1
 neg_sampling: None
-eval_step: 1
-stopping_step: 10
-loss_decimal_place: 4
-weight_decay: 0
 
 # Model settings
 lambda1: 3
 lambda2: 200
 alpha: 0.5
 rho: 4000
-k: 100
-positive_only: True
+k: 50
+positive_only: False
 center_columns: False
 
 #Evaluation Settings
